--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "battleship game",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -15,5 +15,13 @@
   "bugs": {
     "url": "https://github.com/lfomar1/battleship/issues"
   },
-  "homepage": "https://github.com/lfomar1/battleship#readme"
+  "homepage": "https://github.com/lfomar1/battleship#readme",
+  "devDependencies": {
+    "@babel/core": "^7.22.9",
+    "@babel/preset-env": "^7.22.9",
+    "babel-jest": "^29.6.2",
+    "jest": "^29.6.2",
+    "webpack": "^5.88.2",
+    "webpack-cli": "^5.1.4"
+  }
 }
